# byte-ser

./: Cargo.toml  README.md
byteser/: Cargo.toml
byteser/src/: byteser.rs  lib.rs
byteser/src/types/: byteser_ext.rs  byteser_str.rs  byteser_u32.rs  byteser_u8.rs  mod.rs
byteser/tests/: roundtrip.rs
byteser_derive/: Cargo.toml
byteser_derive/src/: lib.rs
