[package]
name = "byteser_derive"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Procedural macro for deriving ByteSerializable trait"
repository = "https://github.com/dipghoshraj/byte-ser"
readme = "README.md"

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.46"
syn = { version = "2.0.118", features = ["full"] }
